Nav bar links aligned at the top. Content fixes in About

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -69,7 +69,7 @@ nav {
   padding-top: 2em;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
   margin-bottom: 4rem;
 }
 
